@startuml domain層クラス図

title domain層クラス図

skinparam classAttributeIconSize 0
skinparam linetype ortho

'========================================
' domain.shared
'========================================
package com.example.keirekipro.domain.shared {
    abstract class Entity {
        # UUID id
        --
        # Entity()
        # Entity(UUID id)
    }
}

package com.example.keirekipro.domain.shared.event {
    interface DomainEvent {
    }

    abstract class AbstractDomainEvent {
        - UUID eventId
        - Instant occurredOn
        --
        # AbstractDomainEvent()
        + UUID getEventId()
        + Instant getOccurredOn()
    }

    interface DomainEventPublisher {
    }

    AbstractDomainEvent ..|> DomainEvent
}

package com.example.keirekipro.domain.shared.exception {
    class DomainException {
        --
        + DomainException(Map<String, List<String>> errors)
        + DomainException(String message)
        + DomainException(String message, Map<String, List<String>> errors)
    }
}

'========================================
' domain.event.user
'========================================
package com.example.keirekipro.domain.event.user {
    class UserDeletedEvent {
        - UUID userId
        - String email
        - String username
    }

    class UserRegisteredEvent {
        - UUID userId
        - String email
        - String username
    }

    UserDeletedEvent --|> AbstractDomainEvent
    UserDeletedEvent ..|> DomainEvent
    UserRegisteredEvent --|> AbstractDomainEvent
    UserRegisteredEvent ..|> DomainEvent
}

'========================================
' domain.model.resume - Value Objects
'========================================
package com.example.keirekipro.domain.model.resume {
    class ResumeName <<Value Object>> {
        - String value
    }

    class CompanyName <<Value Object>> {
        - String value
    }

    class FullName <<Value Object>> {
        - String lastName
        - String firstName
    }

    class Link <<Value Object>> {
        - String value
    }

    class Period <<Value Object>> {
        - YearMonth startDate
        - YearMonth endDate
        - boolean active
    }

    class TechStack <<Value Object>> {
        - Frontend frontend
        - Backend backend
        - Infrastructure infrastructure
        - Tools tools
    }

    class "TechStack.Frontend" as Frontend <<Value Object>> {
        - List<String> languages
        - List<String> frameworks
        - List<String> libraries
        - List<String> buildTools
        - List<String> packageManagers
        - List<String> linters
        - List<String> formatters
        - List<String> testingTools
    }

    class "TechStack.Backend" as Backend <<Value Object>> {
        - List<String> languages
        - List<String> frameworks
        - List<String> libraries
        - List<String> buildTools
        - List<String> packageManagers
        - List<String> linters
        - List<String> formatters
        - List<String> testingTools
        - List<String> ormTools
        - List<String> auth
    }

    class "TechStack.Infrastructure" as Infrastructure <<Value Object>> {
        - List<String> clouds
        - List<String> operatingSystems
        - List<String> containers
        - List<String> databases
        - List<String> webServers
        - List<String> ciCdTools
        - List<String> iacTools
        - List<String> monitoringTools
        - List<String> loggingTools
    }

    class "TechStack.Tools" as Tools <<Value Object>> {
        - List<String> sourceControls
        - List<String> projectManagements
        - List<String> communicationTools
        - List<String> documentationTools
        - List<String> apiDevelopmentTools
        - List<String> designTools
        - List<String> editors
        - List<String> developmentEnvironments
    }

    TechStack --> Frontend
    TechStack --> Backend
    TechStack --> Infrastructure
    TechStack --> Tools
}

'========================================
' domain.model.resume - Entities
'========================================
package com.example.keirekipro.domain.model.resume {
    class Resume <<Aggregate Root>> {
        - UUID userId
        - ResumeName name
        - LocalDate date
        - FullName fullName
        - LocalDateTime createdAt
        - LocalDateTime updatedAt
        - List<Career> careers
        - List<Project> projects
        - List<Certification> certifications
        - List<Portfolio> portfolios
        - List<SnsPlatform> snsPlatforms
        - List<SelfPromotion> selfPromotions
        --
        + Resume changeName(ErrorCollector, ResumeName)
        + Resume changeFullName(ErrorCollector, FullName)
        + Resume changeDate(ErrorCollector, LocalDate)
        + Resume addCareer(ErrorCollector, Career)
        + Resume updateCareer(ErrorCollector, Career)
        + Resume removeCareer(UUID)
        + Resume addProject(ErrorCollector, Project)
        + Resume updateProject(ErrorCollector, Project)
        + Resume removeProject(UUID)
        + Resume addCertification(ErrorCollector, Certification)
        + Resume updateCertification(ErrorCollector, Certification)
        + Resume removeCertification(UUID)
        + Resume addPortfolio(ErrorCollector, Portfolio)
        + Resume updatePortfolio(ErrorCollector, Portfolio)
        + Resume removePortfolio(UUID)
        + Resume addSnsPlatform(ErrorCollector, SnsPlatform)
        + Resume updateSnsPlatform(ErrorCollector, SnsPlatform)
        + Resume removeSnsPlatform(UUID)
        + Resume addSelfPromotion(ErrorCollector, SelfPromotion)
        + Resume updateSelfPromotion(ErrorCollector, SelfPromotion)
        + Resume removeSelfPromotion(UUID)
    }

    class Career {
        - CompanyName companyName
        - Period period
        --
        + Career changeCompanyName(ErrorCollector, CompanyName)
        + Career changePeriod(ErrorCollector, Period)
    }

    class Project {
        - CompanyName companyName
        - Period period
        - String name
        - String overview
        - String teamComp
        - String role
        - String achievement
        - Process process
        - TechStack techStack
        --
        + Project changeCompanyName(ErrorCollector, CompanyName)
        + Project changePeriod(ErrorCollector, Period)
        + Project changeName(ErrorCollector, String)
        + Project changeOverview(ErrorCollector, String)
        + Project changeTeamComp(ErrorCollector, String)
        + Project changeRole(ErrorCollector, String)
        + Project changeAchievement(ErrorCollector, String)
        + Project changeProcess(Process)
        + Project changeTechStack(TechStack)
    }

    class "Project.Process" as Process <<Value Object>> {
        - boolean requirements
        - boolean basicDesign
        - boolean detailedDesign
        - boolean implementation
        - boolean integrationTest
        - boolean systemTest
        - boolean maintenance
    }

    class Certification {
        - String name
        - YearMonth date
        --
        + Certification changeName(ErrorCollector, String)
        + Certification changeDate(ErrorCollector, YearMonth)
    }

    class Portfolio {
        - String name
        - String overview
        - String techStack
        - Link link
        --
        + Portfolio changeName(ErrorCollector, String)
        + Portfolio changeOverview(ErrorCollector, String)
        + Portfolio changeTechStack(ErrorCollector, String)
        + Portfolio changeLink(ErrorCollector, Link)
    }

    class SnsPlatform {
        - String name
        - Link link
        --
        + SnsPlatform changeName(ErrorCollector, String)
        + SnsPlatform changeLink(ErrorCollector, Link)
    }

    class SelfPromotion {
        - String title
        - String content
        --
        + SelfPromotion changeTitle(ErrorCollector, String)
        + SelfPromotion changeContent(ErrorCollector, String)
    }

    ' Entity継承
    Resume --|> Entity
    Career --|> Entity
    Project --|> Entity
    Certification --|> Entity
    Portfolio --|> Entity
    SnsPlatform --|> Entity
    SelfPromotion --|> Entity

    ' Resume集約内の関連
    Resume "1" *-- "0..*" Career : careers
    Resume "1" *-- "0..*" Project : projects
    Resume "1" *-- "0..*" Certification : certifications
    Resume "1" *-- "0..*" Portfolio : portfolios
    Resume "1" *-- "0..*" SnsPlatform : snsPlatforms
    Resume "1" *-- "0..*" SelfPromotion : selfPromotions
    Resume --> ResumeName
    Resume --> FullName

    ' 各エンティティの値オブジェクト関連
    Career --> CompanyName
    Career --> Period
    Project --> CompanyName
    Project --> Period
    Project --> Process
    Project --> TechStack
    Portfolio --> Link
    SnsPlatform --> Link
}

'========================================
' domain.model.user
'========================================
package com.example.keirekipro.domain.model.user {
    class Email <<Value Object>> {
        - String value
    }

    enum RoleName {
        USER
        ADMIN
    }

    class AuthProvider {
        - String providerName
        - String providerUserId
        - LocalDateTime createdAt
        - LocalDateTime updatedAt
    }

    class User <<Aggregate Root>> {
        - Email email
        - String passwordHash
        - Map<String, AuthProvider> authProviders
        - Set<RoleName> roles
        - String profileImage
        - String username
        - LocalDateTime createdAt
        - LocalDateTime updatedAt
        - List<DomainEvent> domainEvents
        --
        + Set<RoleName> getRoles()
        + Set<String> getRoleNames()
        + User addRole(ErrorCollector, RoleName)
        + User removeRole(ErrorCollector, RoleName)
        + List<DomainEvent> getDomainEvents()
        + User addAuthProvider(ErrorCollector, ...)
        + User setEmail(ErrorCollector, Email)
        + User changePassword(ErrorCollector, String)
        + User resetPassword(String)
        + User changeTwoFactorAuthEnabled(ErrorCollector, boolean)
        + User removeAuthProvider(ErrorCollector, String)
        + User changeProfileImage(String)
        + User changeUsername(ErrorCollector, String)
    }

    User --|> Entity
    AuthProvider --|> Entity
    User --> Email
    User "1" *-- "0..*" AuthProvider : authProviders
    User --> RoleName
    User ..> DomainEvent : publishes
}

'========================================
' domain.repository
'========================================
package com.example.keirekipro.domain.repository.resume {
    interface ResumeRepository {
        + List<Resume> findAll(UUID userId)
        + Optional<Resume> find(UUID resumeId)
        + void save(Resume resume)
        + void delete(UUID userId, UUID resumeId)
    }

    ResumeRepository ..> Resume
}

package com.example.keirekipro.domain.repository.user {
    interface UserRepository {
        + Optional<User> findById(UUID userId)
        + Optional<User> findByEmail(String email)
        + Optional<User> findByProvider(String providerName, String providerUserId)
        + void save(User user)
        + void delete(UUID userId)
    }

    UserRepository ..> User
}

'========================================
' domain.policy
'========================================
package com.example.keirekipro.domain.policy.resume {
    class ResumeEntryOrderPolicy {
        + {static} Comparator<Career> careerDesc()
        + {static} Comparator<Project> projectDesc()
        + {static} Comparator<Certification> certificationDesc()
        + {static} Comparator<Portfolio> portfolioNameAsc()
        + {static} Comparator<SnsPlatform> snsPlatFormNameAsc()
        + {static} Comparator<SelfPromotion> selfPromotionTitleAsc()
    }

    ResumeEntryOrderPolicy ..> Career
    ResumeEntryOrderPolicy ..> Project
    ResumeEntryOrderPolicy ..> Certification
    ResumeEntryOrderPolicy ..> Portfolio
    ResumeEntryOrderPolicy ..> SnsPlatform
    ResumeEntryOrderPolicy ..> SelfPromotion
}

'========================================
' domain.service
'========================================
package com.example.keirekipro.domain.service.resume {
    class ResumeNameDuplicationCheckService {
        - ResumeRepository resumeRepository
        --
        + boolean execute(Resume resume)
    }

    class ResumeExportRuleCheckService {
        --
        + void check(Resume resume)
    }

    ResumeNameDuplicationCheckService --> ResumeRepository
}

package com.example.keirekipro.domain.service.user {
    class UserEmailDuplicationCheckService {
        - UserRepository userRepository
        --
        + boolean execute(User user)
    }

    UserEmailDuplicationCheckService --> UserRepository
}

@enduml
